# alpha-shape

./: CMakeLists.txt
src/: ashape.cpp  cgal-ashape.cpp  corner_point_detect.cpp
